added new rq-gpu-worker (that uses gpu queue, old gpu queue renamed to api)

--- a/backend/.vscode/launch.json
+++ b/backend/.vscode/launch.json
@@ -27,6 +27,7 @@
       "env": {
         "PYTHONPATH": "${workspaceFolder}/src",
         "RQ_WORKERS_CPU": "1",
+        "RQ_WORKERS_API": "1",
         "RQ_WORKERS_GPU": "1",
         "CUDA_VISIBLE_DEVICES": "1"
       }
