--- a/docker/.env.example
+++ b/docker/.env.example
@@ -98,7 +98,9 @@ POSTGRES_MAX_CONNECTIONS=200
 # LOG LEVEL ('critical', 'error', 'warning', 'info', 'debug', 'trace')
 RQ_LOG_LEVEL=info
 RQ_WORKERS_CPU=8
-RQ_WORKERS_GPU=16
+RQ_WORKERS_API=16
+RQ_WORKERS_GPU=1
+RQ_DEVICE_IDS=1
 
 
 ### RQ Dashboard settings
