added new HF_HUB_TOKEN env variable to log-in to huggingface to download models!

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -50,6 +50,9 @@ OIDC_CLIENT_ID=put-client-id-here
 OIDC_CLIENT_SECRET=put-client-secret-here
 OIDC_SERVER_METADATA_URL=http://localhost:13180/application/o/dats/.well-known/openid-configuration
 
+# Hugging Face settings for models
+HF_HUB_TOKEN=replace-me-with-your-own-token
+
 ### Connection configuration
 # Tells the backend how to reach the various
 # services it needs.
