--- a/docker/.env.example
+++ b/docker/.env.example
@@ -64,6 +64,8 @@ OIDC_PROVIDER_NAME=Authentik
 OIDC_CLIENT_ID=put-client-id-here
 OIDC_CLIENT_SECRET=put-client-secret-here
 OIDC_SERVER_METADATA_URL=http://my-auth-server/application/o/dats/.well-known/openid-configuration
+# Hugging Face settings for models
+HF_HUB_TOKEN=replace-me-with-your-own-token
 
 
 ### Backend & RQ settings
@@ -124,7 +126,7 @@ VLLM_LLM_EXPOSED=13133
 VLLM_LLM_DEVICE_ID=1
 VLLM_EMB_EXPOSED=13137
 VLLM_EMB_DEVICE_ID=1
-HUGGING_FACE_HUB_TOKEN=replace-me-with-your-own-token
+VLLM_HF_HUB_TOKEN=replace-me-with-your-own-token
 
 
 ### Authentik settings (compose.authentik.yml)
