--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -144,7 +144,9 @@ known-first-party = [
 
 [tool.pyright]
 include = ["src", "test"]
-exclude = ["**/__pycache__",
+exclude = [
+    "**/__pycache__",
+    "**/.venv",
     "src/dev_notebooks",
 ]
 extraPaths = ["src"]
