configurable postgres connections (pool, overflow)

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -66,6 +66,9 @@ OIDC_CLIENT_SECRET=put-client-secret-here
 OIDC_SERVER_METADATA_URL=http://my-auth-server/application/o/dats/.well-known/openid-configuration
 # Hugging Face settings for models
 HF_HUB_TOKEN=replace-me-with-your-own-token
+# NUM DB CONNECTIONS
+BACKEND_POSTGRES_POOL_SIZE=32
+BACKEND_POSTGRES_MAX_OVERFLOW=16
 
 
 ### Backend & RQ settings
@@ -103,6 +106,9 @@ RQ_WORKERS_CPU=8
 RQ_WORKERS_API=16
 RQ_WORKERS_GPU=1
 RQ_DEVICE_IDS=1
+# NUM DB CONNECTIONS
+RQ_POSTGRES_POOL_SIZE=1
+RQ_POSTGRES_MAX_OVERFLOW=1
 
 
 ### RQ Dashboard settings
