--- a/backend/configs/production.yaml
+++ b/backend/configs/production.yaml
@@ -64,8 +64,8 @@ postgres:
   user: ${oc.env:POSTGRES_USER, datsuser}
   password: ${oc.env:POSTGRES_PASSWORD, dats123}
   pool:
-    pool_size: 32
-    max_overflow: 16
+    pool_size: ${oc.env:POSTGRES_POOL_SIZE, 5}
+    max_overflow: ${oc.env:POSTGRES_MAX_OVERFLOW, 10}
 
 mail:
   enabled: ${oc.env:MAIL_ENABLED, False}
