--- a/docker/.env.example
+++ b/docker/.env.example
@@ -106,6 +106,7 @@ RQ_WORKERS_CPU=8
 RQ_WORKERS_API=16
 RQ_WORKERS_GPU=1
 RQ_DEVICE_IDS=1
+RQ_WORKER_GPU_MEM_GB=20
 # NUM DB CONNECTIONS
 RQ_POSTGRES_POOL_SIZE=1
 RQ_POSTGRES_MAX_OVERFLOW=1
