added docling serve

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -86,3 +86,6 @@ VLLM_VLM_MODEL=gemma-3-27b
 VLLM_EMB_HOST=localhost
 VLLM_EMB_PORT=13137
 VLLM_EMB_MODEL=snowflake-arctic-embed-l-v2.0
+
+DOCLING_HOST=localhost
+DOCLING_PORT=13139
