added docling container

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -87,6 +87,10 @@ VLLM_EMB_MODEL=snowflake-arctic-embed-l-v2.0
 RAY_HOST=ray
 RAY_PORT=8000
 
+## Docling connection
+DOCLING_HOST=docling
+DOCLING_PORT=5001
+
 
 ### Redis settings
 REDIS_PASSWORD=dats123
@@ -152,6 +156,11 @@ MARIA_USER=kuma
 MARIA_PASSWORD=kuma123
 MARIA_ROOT_PASSWORD=kumaroot123
 DOCKER_GROUP_ID=999
+
+
+### Docling settings (compose.docling.yml)
+DOCLING_EXPOSED=13139
+DOCLING_DEVICE_IDS=0
 
 
 ### Development settings(compose.override.yml)
