added missing network

--- a/docker/compose.docling.yml
+++ b/docker/compose.docling.yml
@@ -45,6 +45,8 @@ services:
     #  - ./docling_cache/cache:/opt/app-root/src/.cache
     #  - ./docling/data:/doclingdata
     restart: always
+    networks:
+      - docling_network
 
 networks:
   docling_network:
